--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,4 +1,4 @@
-<img src="{{url_for('static', 'test.jpg')}}">
+<img src="{{url_for('static', filename='test.jpg')}}">
 <p> 
 rgb values: {{data[0], data[1], data[2]}} 
 </p>
