--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,12 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>SAWIT MACHINE VISION</title>
-    <link rel="stylesheet" href="{{url_for("static", filename="bootstrap.min.css")}}">
-    <script src="{{url_for('static', filename="jquery.min.js")}}" charset="utf-8"></script>
-    <script src="{{url_for('static', filename="bootstrap.min.js")}}" charset="utf-8"></script>
+    <link rel="stylesheet" href="{{url_for("static", filename="css/bootstrap.min.css")}}">
+    <script src="{{url_for('static', filename="js/jquery.min.js")}}" charset="utf-8"></script>
+    <script src="{{url_for('static', filename="js/bootstrap.min.js")}}" charset="utf-8"></script>
 
   </head>
   <body>
-    
+    <header>
+		<nav>
+			<div class="nav navbar-default navbar-fixed-top" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a href="#" class="navbar-brand">Sawit Machine Vision - Photonic Laboratoy</a>
+					</div>
+
+				</div>
+			</div>
+		</nav>
+	</header>
+    <div class="container">
+      {%block container%}{%endblock%}
+    </div>
   </body>
 </html>
