--- a/server/templates/dev.html
+++ b/server/templates/dev.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 {%block container%}
 <div class="row">
-  <div class="col-md-12" style="padding-top:20%">
+  <div class="col-md-12" style="padding-top:10%">
     <div class="card">
 
       <div class="card-header">
@@ -9,8 +9,10 @@
       </div>
 
       <div class="card-body">
-        <input class="btn btn-lg" type="submit" name="capture" value="capture">
-        <p class="card-text">press capture to get image from camera</p>
+        <form method="post" enctype="multipart/form-data">
+          <input type="file" name="file">
+          <input class="btn btn-primary" type="submit" value="upload">
+        </form>
       </div>
     </div>
 
@@ -20,16 +22,15 @@
         <h2 class="card-header">image data</h2>
       </div>
 
+
+
+      {%if data%}
       <div class="card-body">
         <h5>filename: 20170504143009.jpg</h5>
         <h5>file size: 20 Kb</h5>
-        <h5>gray value (3, 3, 3)</h5>
-        <h5>gray value (120, 20, 3)</h5>
-        <div class="alert alert-light" role="alert">
-          Mentah
-        </div>
-
-      </div>
+        <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
+        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5>
+      {%endif%}
     </div>
 
   </div>
