--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -1,15 +1,45 @@
 {% extends "base.html"%}
 {%block container%}
-  {{if data}}
-    <img src="{{url_for('static', filename='test.jpg')}}">
-    <p>
-      rgb values: {{data[0], data[1], data[2]}}
-    </p>
+<div class="row">
 
-  {{else}}
+  <div class="col-md-12" style="padding-top:10%">
+    <div class="card">
 
-  <form action="/capture" method="post">
-     <input type="submit" name="submit" placeholder="submit">
-  </form>
+      <div class="card-header">
+        <h2 class="card-header">image-control</h2>
+      </div>
 
+      <div class="card-body">
+        <form method=post enctype=multipart/form-data>
+          <input type=file name=file>
+          <input type=submit value=Upload>
+        </form>
+
+
+        <input class="btn btn-lg" type="submit" name="capture" value="capture">
+        <p class="card-text">press capture to get image from camera</p>
+      </div>
+    </div>
+
+    <div class="card">
+
+      <div class="card-header">
+        <h2 class="card-header">image data</h2>
+      </div>
+      {{if data}}
+      <div class="card-body">
+        <h5>filename: 20170504143009.jpg</h5>
+        <h5>file size: 20 Kb</h5>
+        <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
+        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5>
+      {{endif}}
+        <div class="alert alert-light" role="alert">
+          Mentah
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
 {%endblock%}
