fix templating error

--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -26,7 +26,8 @@
       <div class="card-header">
         <h2 class="card-header">image data</h2>
       </div>
-      {{if data}}
+
+      {{if rgb and grey_value}}
       <div class="card-body">
         <h5>filename: 20170504143009.jpg</h5>
         <h5>file size: 20 Kb</h5>
