--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -31,9 +31,12 @@
       <div class="card-body">
         <h5>filename: 20170504143009.jpg</h5>
         <h5>file size: 20 Kb</h5>
-        <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
-        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5>
+        <h5>gray value: {{grey_value[0]}} {{grey_value[1]}} {{grey_value[2]}}</h5>
+        <h5>rgb value {{rgb[0]}} {{rgb[1]}} {{rgb[2}}</h5>
+      {{else}}
+        <h5>no data avaliable</h5>
       {{endif}}
+
         <div class="alert alert-light" role="alert">
           Mentah
         </div>
