--- a/server/templates/dev.html
+++ b/server/templates/dev.html
@@ -24,12 +24,15 @@
 
 
 
-      {%if data%}
+      {%if rgb and grey_value%}
       <div class="card-body">
         <h5>filename: 20170504143009.jpg</h5>
         <h5>file size: 20 Kb</h5>
         <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
         <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5>
+
+      {%else%}
+      <p>no data available</p>
       {%endif%}
     </div>
 
