--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -10,11 +10,6 @@
       </div>
 
       <div class="card-body">
-        <form method=post enctype=multipart/form-data>
-          <input type=file name=file>
-          <input type=submit value=Upload>
-        </form>
-
 
         <input class="btn btn-lg" type="submit" name="capture" value="capture">
         <p class="card-text">press capture to get image from camera</p>
@@ -32,7 +27,7 @@
         <h5>filename: 20170504143009.jpg</h5>
         <h5>file size: 20 Kb</h5>
         <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
-        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}</h5>
+        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5>
       {%else%}
         <h5>no data avaliable</h5>
       {%endif%}
