--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -22,6 +22,7 @@
 
       <div class="card-header">
         <h2 class="card-header">image data</h2>
+        <img src="{{url_for('static', filename='test.jpg')}}" alt="">
       </div>
 
       {% if rgb %}
