--- a/server/templates/dev.html
+++ b/server/templates/dev.html
@@ -20,6 +20,7 @@
 
       <div class="card-header">
         <h2 class="card-header">image data</h2>
+        <img src="{{url_for('static', filename='test.jpg')}}" alt="">
       </div>
 
 
