--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -23,7 +23,8 @@
       <div class="card-header">
         <h2 class="card-header">image data</h2>
         {% if filename%}
-        <img src={{"static/"+filename}} alt="">
+        <img style="height: 50%; width: 50%;" src={{"static/"+filename}} alt="">
+        
         {% endif %}
       </div>
 
