modified:   templates/dev.html 	modified:   templates/prod.html

--- a/server/templates/dev.html
+++ b/server/templates/dev.html
@@ -4,9 +4,6 @@
   <div class="col-md-12" style="padding-top:10%">
     <div class="card">
 
-      <div class="card-header">
-        <h2 class="card-header">image-control</h2>
-      </div>
 
       <div class="card-body">
         <form method="post" enctype="multipart/form-data">
@@ -20,7 +17,7 @@
 
       <div class="card-header">
         <h2 class="card-header">image data</h2>
-        <img src="{{url_for('static', filename='test.jpg')}}" alt="">
+        <img style="height: auto; width: auto" src="{{url_for('static', filename='test.jpg')}}" alt="">
       </div>
 
 
