--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -5,10 +5,6 @@
   <div class="col-md-12" style="padding-top:10%">
     <div class="card">
 
-      <div class="card-header">
-        <h2 class="card-header">image-control</h2>
-      </div>
-
       <div class="card-body">
 
         <form class="" action="/" method="post">
@@ -21,16 +17,17 @@
     <div class="card">
 
       <div class="card-header">
-        <h2 class="card-header">image data</h2>
+        <h2 class="card-header">captured image</h2>
         {% if filename%}
-        <img style="height: 100%; width: 100%;" src={{"static/"+filename}} alt="">
+        <img style="height: auto; width: auto;" src={{"static/"+filename}} alt="">
 
         {% endif %}
       </div>
 
       {% if rgb %}
       <div class="card-body">
-        <h5>filename: 20170504143009.jpg</h5>
+        <h3>Information</h3>
+        <h5>filename: {{filename}}</h5>
         <h5>file size: 20 Kb</h5>
         <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
         <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5
@@ -39,7 +36,8 @@
       {% endif %}
 
         <div class="alert alert-light" role="alert">
-          Mentah
+          <h3>Hasil klasifikasi</h3>
+          <h4>Mentah</h4>
         </div>
 
       </div>
