--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -13,31 +13,38 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="row">
+      <div class="container">
+        <div class="col-sm-8">
+          {% if filename%}
+          <img style="height: 80; width: 80;" src={{"static/"+filename}} alt="">
+          {% endif %}
+        </div>
 
-      <div class="card-header">
-
-        {% if filename%}
-        <img style="height: 100; width: 100;" src={{"static/"+filename}} alt="">
-
-        {% endif %}
+        <div class="col-sm-8">
+          {% if rgb %}
+            <h3>Information</h3>
+            <h5>filename: {{filename}}</h5>
+            <h5>file size: 20 Kb</h5>
+            <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
+            <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5
+            <div class="alert alert-light" role="alert">
+                <h3>Hasil klasifikasi</h3>
+                <h4>Mentah</h4>
+              </div>
+          {% else %}
+          <h5>no data avaliable</h5>
+          {% endif %}
+        </div>
       </div>
 
-      {% if rgb %}
-      <div class="card-body">
-        <h3>Information</h3>
-        <h5>filename: {{filename}}</h5>
-        <h5>file size: 20 Kb</h5>
-        <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
-        <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5
-      {% else %}
-        <h5>no data avaliable</h5>
-      {% endif %}
 
-        <div class="alert alert-light" role="alert">
-          <h3>Hasil klasifikasi</h3>
-          <h4>Mentah</h4>
-        </div>
+    </div>
+
+
+
+
+
 
       </div>
     </div>
