--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="col-sm-8">
           {% if filename%}
-          <img style="height: 30; width: 80;" src={{"static/"+filename}} alt="">
+          <img style="height: 10%; width: 20%;" src={{"static/"+filename}} alt="">
           {% endif %}
         </div>
 
