--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -20,7 +20,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a href="#" class="navbar-brand">Sawit Machine Vision - Photonic Laboratoy</a>
+					  <input class="btn btn-lg" type="submit" formmethod="post" formaction="/" name="capture" value="capture">
 					</div>
 
 				</div>
