--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -3,12 +3,12 @@
 <div class="row">
 
   <div class="col-md-12" style="padding-top:10%">
-    
+
     <div class="row">
       <div class="container">
         <div class="col-sm-8">
           {% if filename%}
-          <img style="height: 50%; width: 70%;" src={{"static/"+filename}} alt="">
+          <img style="height: 60%; width: 90%;" src={{"static/"+filename}} alt="">
           {% endif %}
         </div>
 
@@ -16,7 +16,7 @@
           {% if rgb %}
             <h3>Information</h3>
             <h5>filename: {{filename}}</h5>
-            <h5>file size: 20 Kb</h5>
+    x`        <h5>file size: 20 Kb</h5>
             <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
             <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5
             <div class="alert alert-light" role="alert">
