--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -20,7 +20,9 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-					  <input class="btn btn-lg" type="submit" formmethod="post" formaction="/" name="capture" value="capture">
+            <form class="" action="/" method="post">
+              <input class="btn btn-lg" type="submit" formmethod="post" formaction="/" name="capture" value="capture">
+            </form>
 					</div>
 
 				</div>
