modified:   serve.py 	modified:   templates/base.html 	modified:   templates/prod.html

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -22,6 +22,7 @@
 						</button>
             <form class="" action="/" method="post">
               <input class="btn btn-lg" type="submit" formmethod="post" formaction="/" name="capture" value="capture">
+              <a href="#">Images</a>
             </form>
 					</div>
 
