--- a/server/templates/prod.html
+++ b/server/templates/prod.html
@@ -14,9 +14,8 @@
 
         <div class="col-sm-8">
           {% if rgb %}
-            <h3>Information</h3>
             <h5>filename: {{filename}}</h5>
-    x`        <h5>file size: 20 Kb</h5>
+              <h5>file size: 20 Kb</h5>
             <h5>gray value: {{grey_value[0], grey_value[1], grey_value[2]}}</h5>
             <h5>rgb value {{rgb[0], rgb[1], rgb[2]}}</h5
             <div class="alert alert-light" role="alert">
